<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_products"
        android:icon="@drawable/outline_search_black_24dp"
        android:title="@string/nav_products" />

    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/outline_shopping_cart_black_24dp"
        android:title="@string/nav_cart" />

    <item
        android:id="@+id/nav_nearme"
        android:icon="@drawable/outline_location_searching_black_24dp"
        android:title="@string/nav_nearme" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/outline_settings_black_24dp"
        android:title="@string/nav_settings" />

</menu>
