<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/signupForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/AppTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/AppVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_version"/>

            <TextView
                android:id="@+id/AppMaker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_maker" />

            <Button
                android:id="@+id/Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:onClick="loginOnClick"
                android:text="@string/goto_login_action" />

            <Button
                android:id="@+id/Signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:onClick="signupOnClick"
                android:text="@string/goto_signup_action" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>